--- a/index.html
+++ b/index.html
@@ -7,58 +7,92 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
     <title>Kenya In CodingLand</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="Loaderstyle.css" rel="stylesheet" type="text/css">
+    <link href="style3.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/1484c96635.js" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 </head>
 
 <body>
-    <!--Loading Page HTML Element-->
-    <div class="loading"></div>
+    <!--All things navbar-->
+    <nav class="navbar navbar-dark navbar-expand-sm">
+        <!-- Brand -->
+        <a class="navbar-brand" href="#"><img src="logowtag.svg" alt="Web Developer Logo, Front End Developer"
+                width="200px" height="200px">
+        </a>
 
-    <header class="grid-1">
-        <div>
-            <img src="KiCLogoPlum.png" alt="Kenya in CodingLand" id="logo">
-            <p>I, like Alice, fell down the rabbit hole and have found myself
-                on the most bizarre adventure that is coding. My specialty is designing and building user interfaces.
-                This story's just getting started!
-                Learn more about my adventures & projects I'm building along the way.
-            </p>
-        </div>
-        <img id="self-portrait" src="Selfpic.png" alt="picture of Kenya">
-    </header>
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="grid-2">
-        <a href="#jump-to" class="grid-item button-rabbithole" Onclick="swirl()">Fall Down Rabbit Hole</a>
-        <!--<img id="swirl" class="grid-item" src="swirl.png" alt="swirl loading" width="200px" height="200px">-->
-    </div>
-
-    <section class="grid-3">
-        <div id="jump-to">
-            <h2>Recent Work</h2>
-            <ul>
-                <li class="text"><a href="#"><sup>01 </sup>SpringHill United Methodist Church</a></li>
-                <li class="text"><a href="https://kenyawilson.github.io/RosesAreRed/" target="blank"><sup>02 </sup>Roses
-                        Are Red</a></li>
-                <li class="text"><a href="https://kenyawilson.github.io/frontend-mimic/"><sup>03 </sup>TinyHorse
-                        Mimic</a></li>
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse " id="collapsibleNavbar">
+            <ul class="navbar-nav justify-content-center">
+                <li class="nav-item">
+                    <a rel="index" href="#" class="nav-link" active>
+                        <i class="fas fa-home"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a rel="about" href="#" class="nav-link">
+                        <i class="fas fa-user"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a rel="skills" href="#" class="nav-link">
+                        <i class="fas fa-cog"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a rel="projects" href="#" class="nav-link">
+                        <i class="fas fa-eye"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a rel="contact" href="#" class="nav-link">
+                        <i class="fas fa-envelope"></i>
+                    </a>
+                </li>
             </ul>
-
-            <br>
-            <p>Are you a business seeking a web presence or are looking to hire? <a
-                    href="mailto:kenya.wilson93@gmail.com">Contact Me.</a></p>
         </div>
+    </nav>
+
+    <section id="page" class="en">
+        <div class="text-place">
+            <h1>Hi! <br> I'm <span><img src="KIClogo5.svg" alt="Web Developer Logo, Front End Developer" width="50px"
+                        height="50px"></span>enya,<br> web developer.<br></h1>
+            <h2><em>Front End Developer / Master of Exploring Rabbit Holes</em></h2>
+
+            <div class="projects-grid">
+                <a href="https://kenyawilson.github.io/RosesAreRed/" target="_blank"><img src="RosesAreRedproject.svg" alt="Roses are Red" width="200px" height="200px"></a>
+                <a href="#" target="_blank"></a><img src="Springhillproject.svg" alt="Springhill United Methodist Church" width="200px" height="200px"></a>
+                <a href="https://kenyawilson.github.io/frontend-mimic/" target="_blank"><img src="tinyhorseproject.svg" alt="Tiny Horse" width="200px" height="200px"></a>
+            </div>
+
+            <p>Available for new projects & adventures! <br> Let's chat.</p>
+
+            <a rel="contact" href="#" class="flat-button">CONTACT ME</a>
+        </div>
+
+
+        <div id="vide"></div>
+
+        <footer class="footer-grid">
+            <p>Kenya in CodingLand &copy; 2020</p>
+            <p>Designed By Me<i class="fas fa-heart"></i></p>
+        </footer>
     </section>
 
-    <footer class="footer-grid">
-        <p>Kenya in CodingLand &copy; 2020</p>
-        <p>Designed By Me<i class="fas fa-heart"></i></p>
-    </footer>
-
-    <script src="script.js"></script>
-    <script src="loadingScript.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
