--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
     <title>Kenya In CodingLand</title>
-    <link href="style3.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/1484c96635.js" crossorigin="anonymous"></script>
@@ -27,34 +27,34 @@
         </button>
 
         <!-- Navbar links -->
-        <div class="collapse navbar-collapse " id="collapsibleNavbar">
-            <ul class="navbar-nav justify-content-center">
-                <li class="nav-item">
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <div class="navbar-nav nav-grid">
+                <div class="nav-item">
                     <a rel="index" href="#" class="nav-link" active>
                         <i class="fas fa-home"></i>
                     </a>
-                </li>
-                <li class="nav-item">
+                </div>
+                <div class="nav-item">
                     <a rel="about" href="#" class="nav-link">
                         <i class="fas fa-user"></i>
                     </a>
-                </li>
-                <li class="nav-item">
+                </div>
+                <div class="nav-item">
                     <a rel="skills" href="#" class="nav-link">
                         <i class="fas fa-cog"></i>
                     </a>
-                </li>
-                <li class="nav-item">
+                </div>
+                <div class="nav-item">
                     <a rel="projects" href="#" class="nav-link">
                         <i class="fas fa-eye"></i>
                     </a>
-                </li>
-                <li class="nav-item">
+                </div>
+                <div class="nav-item">
                     <a rel="contact" href="#" class="nav-link">
                         <i class="fas fa-envelope"></i>
                     </a>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
     </nav>
 
@@ -65,9 +65,12 @@
             <h2><em>Front End Developer / Master of Exploring Rabbit Holes</em></h2>
 
             <div class="projects-grid">
-                <a href="https://kenyawilson.github.io/RosesAreRed/" target="_blank"><img src="RosesAreRedproject.svg" alt="Roses are Red" width="200px" height="200px"></a>
-                <a href="#" target="_blank"></a><img src="Springhillproject.svg" alt="Springhill United Methodist Church" width="200px" height="200px"></a>
-                <a href="https://kenyawilson.github.io/frontend-mimic/" target="_blank"><img src="tinyhorseproject.svg" alt="Tiny Horse" width="200px" height="200px"></a>
+                <a href="https://kenyawilson.github.io/RosesAreRed/" target="_blank"><img src="RosesAreRedproject.svg"
+                        alt="Roses are Red" width="200px" height="200px"></a>
+                <a href="#" target="_blank"></a><img src="Springhillproject.svg"
+                    alt="Springhill United Methodist Church" width="200px" height="200px"></a>
+                <a href="https://kenyawilson.github.io/frontend-mimic/" target="_blank"><img src="tinyhorseproject.svg"
+                        alt="Tiny Horse" width="200px" height="200px"></a>
             </div>
 
             <p>Available for new projects & adventures! <br> Let's chat.</p>
