--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--All things navbar-->
     <nav class="navbar navbar-dark navbar-expand-sm">
         <!-- Brand -->
-        <a class="navbar-brand" href="#"><img src="logowtag.svg" alt="Web Developer Logo, Front End Developer"
+        <a class="navbar-brand" href="#"><img src="logowtag.png" alt="Web Developer Logo, Front End Developer"
                 width="150px" height="150px">
         </a>
 
