--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!--All things navbar-->
     <nav class="navbar navbar-dark navbar-expand-sm">
         <!-- Brand -->
-        <a class="navbar-brand" href="#"><img src="logowtags.svg" alt="Web Developer Logo, Front End Developer"
-                width="200px" height="200px">
+        <a class="navbar-brand" href="#"><img src="logowtags.png" alt="Web Developer Logo, Front End Developer"
+                width="100px" height="100px">
         </a>
 
         <!-- Toggler/collapsibe Button -->
