--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
     <title>Kenya In CodingLand</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="style2.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/1484c96635.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <!--All things navbar-->
     <nav class="navbar navbar-dark navbar-expand-sm">
         <!-- Brand -->
         <a class="navbar-brand" href="index.html"><img src="logowtags.png" alt="Web Developer Logo, Front End Developer"
@@ -60,34 +59,30 @@
         </div>
     </nav>
 
-    <section id="page" class="en">
-        <div class="text-place">
-            <h1>Hi! <br> I'm <span><img src="KIClogo5.svg" alt="Web Developer Logo, Front End Developer" max-width="50px"
-                        height="50px"></span>enya,<br> web developer.<br></h1>
-            <h2><em>Front End Developer / Master of Exploring Rabbit Holes</em></h2>
-
-            <div class="projects-grid">
-                <a href="https://kenyawilson.github.io/RosesAreRed/" target="_blank"><img src="RosesAreRedproject.svg"
-                        alt="Roses are Red" width="200px" height="200px"></a>
-                <a href="#" target="_blank"></a><img src="Springhillproject.svg"
-                    alt="Springhill United Methodist Church" width="200px" height="200px"></a>
-                <a href="https://kenyawilson.github.io/frontend-mimic/" target="_blank"><img src="tinyhorseproject.svg"
-                        alt="Tiny Horse" width="200px" height="200px"></a>
-            </div>
-
-            <p id="text-block">Available for new projects & adventures! <br> Let's chat.</p>
-
-            <a rel="contact" href="#" class="flat-button">CONTACT ME</a>
+    <div class="container">
+        <div class="top-contact" style="text-align:center">
+            <h2>Contact Me</h2>
+            <p>I am interested in freelance & hiring opportunities!</p>
         </div>
+        <div class="row">
+            <div class="column">
+                <img src="images/Selfpic.png" style="width:100%">
+            </div>
+            <div class="column">
+                <form action="/action_page.php">
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                    <label for="subject">Subject</label>
+                    <textarea id="subject" name="subject" placeholder="Write something.."
+                        style="height:170px"></textarea>
+                    <input type="submit" value="Send" class="flat-button">
+                </form>
+            </div>
+        </div>
+    </div>
 
-
-        <div id="vide"></div>
-
-        <footer class="footer-grid">
-            <p>Kenya in CodingLand &copy; 2020</p>
-            <p>Designed By Me<i class="fas fa-heart"></i></p>
-        </footer>
-    </section>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -98,6 +93,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
