--- a/about.html
+++ b/about.html
@@ -59,12 +59,19 @@
         </div>
     </nav>
 
-    <h1>About Me</h1>
-    <p>“Oh, you can’t help that,” said the Cat: “we’re all mad here.
-        I’m mad. You’re mad.” “How do you know I’m mad?” said Alice.
-        “You must be,” said the Cat, or you wouldn’t have come here.” Sound familiar?</p>
-
-    <p>I, like Alice fell down the rabbit hole and have found myself on the most bizarre adventure that is coding</p>
+    <div class="grid1">
+        <h1>About Me</h1>
+        <p>“Oh, you can’t help that,” said the Cat: “we’re all mad here.
+            I’m mad. You’re mad.” “How do you know I’m mad?” said Alice.
+            “You must be,” said the Cat, or you wouldn’t have come here.” Sound familiar? 
+            <br><br>
+            I, like Alice fell down the rabbit hole and have found myself on the most bizarre adventure that is coding.
+        </p>
+        <footer class="footer-grid">
+            <p>Kenya in CodingLand &copy; 2020</p>
+            <p id="footer-text">Designed By Me<i class="fas fa-heart"></i></p>
+        </footer>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
