--- a/skills.html
+++ b/skills.html
@@ -59,14 +59,21 @@
         </div>
     </nav>
 
-    <h1>Skills & Experience</h1>
-    <p>I am an emerging full-stack web developer however, I have the
-        most fun and expertise currently in the front end (client side of the web).
-        HTML, CSS, Bootstrap, animations, Javascript and interactive websites.
-        <br>
-        Visit my <a href="https://www.linkedin.com/in/kenyawilson/">Linkedin</a> profile fore more details or just
-        <a href="contact.html">contact</a> me.
-    </p>
+    <div class="grid1">
+        <h1>Skills & Experience</h1>
+        <p>I am an emerging full-stack web developer however, I have the
+            most fun and expertise currently in the front end (client side of the web).
+            HTML, CSS, Bootstrap, animations, Javascript and interactive websites.
+            <br>
+            Visit my <a href="https://www.linkedin.com/in/kenyawilson/">Linkedin</a> profile fore more details or just
+            <a href="contact.html">contact</a> me.
+        </p>
+
+        <footer class="footer-grid">
+            <p>Kenya in CodingLand &copy; 2020</p>
+            <p id="footer-text">Designed By Me<i class="fas fa-heart"></i></p>
+        </footer>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
