--- a/contact.html
+++ b/contact.html
@@ -83,6 +83,11 @@
         </div>
     </div>
 
+    <footer class="footer-grid">
+        <p>Kenya in CodingLand &copy; 2020</p>
+        <p id="footer-text">Designed By Me<i class="fas fa-heart"></i></p>
+    </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
