--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
             <h2><em>Front End Developer / Master of Exploring Rabbit Holes</em></h2>
 
             <div class="projects-grid">
-                <a href="https://kenyawilson.github.io/RosesAreRed/" target="_blank"><img src="RosesAreRedproject.svg"
+                <a href="https://kenyawilson.github.io/RosesAreRed/" target="_blank"><img src="RosesAreRedproject.png"
                         alt="Roses are Red" width="200px" height="200px"></a>
                 <a href="#" target="_blank"></a><img src="Springhillproject.svg"
                     alt="Springhill United Methodist Church" width="200px" height="200px"></a>
-                <a href="https://kenyawilson.github.io/frontend-mimic/" target="_blank"><img src="tinyhorseproject.svg"
+                <a href="https://kenyawilson.github.io/frontend-mimic/" target="_blank"><img src="tinyhorseproject.png"
                         alt="Tiny Horse" width="200px" height="200px"></a>
             </div>
 
@@ -85,7 +85,7 @@
 
         <footer class="footer-grid">
             <p>Kenya in CodingLand &copy; 2020</p>
-            <p>Designed By Me<i class="fas fa-heart"></i></p>
+            <p id="footer-text">Designed By Me<i class="fas fa-heart"></i></p>
         </footer>
     </section>
 
