--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h2><em>Front End Developer / Master of Exploring Rabbit Holes</em></h2>
 
             <div class="projects-grid">
-                <a href="https://kenyawilson.github.io/RosesAreRed/" target="_blank"><img src="RosesAreRedproject.svg"
+                <a href="https://kenyawilson.github.io/RosesAreRed/" target="_blank"><img src="RosesAreRedproject.png"
                         alt="Roses are Red" width="200px" height="200px"></a>
                 <a href="#" target="_blank"></a><img src="Springhillproject.svg"
                     alt="Springhill United Methodist Church" width="200px" height="200px"></a>
@@ -77,7 +77,7 @@
 
             <p id="text-block">Available for new projects & adventures! <br> Let's chat.</p>
 
-            <a rel="contact" href="#" class="flat-button">CONTACT ME</a>
+            <a rel="contact" href="contact.html" class="flat-button">CONTACT ME</a>
         </div>
 
 
