--- a/about.html
+++ b/about.html
@@ -63,9 +63,13 @@
         <h1>About Me</h1>
         <p>“Oh, you can’t help that,” said the Cat: “we’re all mad here.
             I’m mad. You’re mad.” “How do you know I’m mad?” said Alice.
-            “You must be,” said the Cat, or you wouldn’t have come here.” Sound familiar? 
+            “You must be,” said the Cat, or you wouldn’t have come here.” Sound familiar?
             <br><br>
             I, like Alice fell down the rabbit hole and have found myself on the most bizarre adventure that is coding.
+            <br><br>
+            My curiosity comes with a side of organization and high attention to detail. I am interested in the full
+            stack spectrum and working on complex projects
+            with great people.
         </p>
         <footer class="footer-grid">
             <p>Kenya in CodingLand &copy; 2020</p>
