--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--All things navbar-->
     <nav class="navbar navbar-dark navbar-expand-sm">
         <!-- Brand -->
-        <a class="navbar-brand" href="#"><img src="logowtags.png" alt="Web Developer Logo, Front End Developer"
+        <a class="navbar-brand" href="index.html"><img src="logowtags.png" alt="Web Developer Logo, Front End Developer"
                 width="100px" height="75px">
         </a>
 
@@ -67,7 +67,7 @@
             <h2><em>Front End Developer / Master of Exploring Rabbit Holes</em></h2>
 
             <div class="projects-grid">
-                <a href="https://kenyawilson.github.io/RosesAreRed/" target="_blank"><img src="RosesAreRedproject.png"
+                <a href="https://kenyawilson.github.io/RosesAreRed/" target="_blank"><img src="rosesareredproject.png"
                         alt="Roses are Red" width="200px" height="200px"></a>
                 <a href="#" target="_blank"></a><img src="Springhillproject.svg"
                     alt="Springhill United Methodist Church" width="200px" height="200px"></a>
