--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm">
         <!-- Brand -->
-        <a class="navbar-brand" href="index.html"><img src="logowtags.png" alt="Web Developer Logo, Front End Developer"
+        <a class="navbar-brand" href="https://kenyawilson.github.io/KenyainCodingLand/index.html"><img src="logowtags.png" alt="Web Developer Logo, Front End Developer"
                 max-width="100px" height="70px">
         </a>
 
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <div class="navbar-nav nav-grid">
                 <div class="nav-item">
-                    <a rel="index" href="index.html" class="nav-link" active>
+                    <a rel="index" href="https://kenyawilson.github.io/KenyainCodingLand/index.html" class="nav-link" active>
                         <i class="fas fa-home"></i>
                     </a>
                 </div>
