--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="projects-grid">
                 <a href="https://kenyawilson.github.io/RosesAreRed/" target="_blank"><img src="rosesareredproject.png"
                         alt="Roses are Red" width="200px" height="200px"></a>
-                <a href="#" target="_blank"></a><img src="Springhillproject.svg"
+                <a href="https://kenyawilson.github.io/SpringHill-UMC/" target="_blank"></a><img src="Springhillproject.svg"
                     alt="Springhill United Methodist Church" width="200px" height="200px"></a>
                 <a href="https://kenyawilson.github.io/frontend-mimic/" target="_blank"><img src="tinyhorseproject.png"
                         alt="Tiny Horse" width="200px" height="200px"></a>
