--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <footer class="footer-grid">
             <p>Kenya in CodingLand &copy; 2020</p>
-            <p id="footer-text">Designed By Me<i class="fas fa-heart"></i></p>
+            <p id="footer-text">Designed By Me</p>
         </footer>
     </section>
 
