--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
 </head>
 
 <body>
-    <!--All things navbar-->
     <nav class="navbar navbar-dark navbar-expand-sm">
         <!-- Brand -->
-        <a class="navbar-brand" href="https://kenyawilson.github.io/KenyainCodingLand/"><img src="logowtags.png" alt="Web Developer Logo, Front End Developer"
-                width="200px" height="175px">
+        <a class="navbar-brand" href="index.html"><img src="logowtags.png" alt="Web Developer Logo, Front End Developer"
+                max-width="100px" height="70px">
         </a>
 
         <!-- Toggler/collapsibe Button -->
@@ -30,7 +29,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <div class="navbar-nav nav-grid">
                 <div class="nav-item">
-                    <a rel="index" href="https://kenyawilson.github.io/KenyainCodingLand/" class="nav-link" active>
+                    <a rel="index" href="index.html" class="nav-link" active>
                         <i class="fas fa-home"></i>
                     </a>
                 </div>
@@ -85,7 +84,7 @@
 
         <footer class="footer-grid">
             <p>Kenya in CodingLand &copy; 2020</p>
-            <p id="footer-text">Designed By Me</p>
+            <p id="footer-text">Designed By Me<i class="fas fa-heart"></i></p>
         </footer>
     </section>
 
